#  File      : /afs/psi.ch/user/f/flechsig/phase/src/phase/Makefile.am
#  Date      : <26 Nov 03 15:37:47 flechsig> 
#  Time-stamp: <05 Dec 07 16:53:18 flechsig> 
#  Author    : Uwe Flechsig, flechsig@psi.ch

#  $Source$ 
#  $Date$
#  $Revision$ 
#  $Author$ 

# this is the makefile template to built phase with automake/ autoconfig

bin_PROGRAMS  = mis
mis_SOURCES   = mis.F \
	../phase/misali.F  ../phase/misali1.f \
	../phase/misali2.f ../phase/misali3.f \
	../phase/misali4.f 

# end